ui: fix modal type misalignment

--- a/assets/styles/theme.pcss
+++ b/assets/styles/theme.pcss
@@ -68,8 +68,9 @@
 .Modal .Title,
 .Modal .Text,
 .Modal .Text--small {
-  margin-left: 50%;
+  margin: 0;
   text-align: right;
+  width: 100%;
 }
 
 .Modal a {
